# spa-artifact

./: .gitignore  Dockerfile  LICENSE  README.md  detailed-README.md  setup.py
docker-share/: environment.yml  setup.cfg  setup.py
docker-share/checkpoints/os-boot-4-core/: command.sh  config.ini  config.json  output.txt  stats.txt  system.pc.com_1.device
docker-share/csv-results/: blackscholes-simsmall-cores_4-l2_3MB-l1miss.csv  canneal-simsmall-cores_4-l2_3MB-l1miss.csv  ferret_3mb_l1miss1k.csv  ferret_3mb_l1miss1kround.csv  ferret_3mb_l2miss1k.csv  ferret_3mb_maxload.csv  ferret_3mb_tlbwritemiss1k.csv  ferret_3mb_tlbwritemiss1kround.csv  fluidanimate-simsmall-cores_4-l2_3MB-l1miss.csv  freqmine-simsmall-cores_4-l2_3MB-l1miss.csv
docker-share/gem5/: compilation.out  gem5-builder.sh  gem5-example-script.sh  parsec-example-script.out
docker-share/in-docker-bash-scripts/: copy-parsec-binaries.sh  download-disk.sh  set-up-conda.sh
docker-share/paper-figures/: figure-1.py  figure-10_11.py  figure-12.py  figure-13.py  figure-2.py  figure-4.py  figure-5.py  figure-6_7.py  figure-8_9.py
docker-share/precompiled-ferret/run/: benchmark.out
docker-share/python-runners/: convert-gem5-results-to-csv.py  meta-runner.py  run-gem5-roi-docker.py
docker-share/spa/smc_engine/: testpartial.py
docker-share/spa/spa_frontend/: spa.py  support_maps.py  t-test_runtime.py
docker-share/spa/tkinter-ui/: gem5_csv_output.py
docker-share/spa/util/: csv_reader.py  distribution_show.py  l2-miss-per-1k-inst-results-to-csv.py  seeds_1000-length_50.txt  (+1 more)
docs/: gem5-instructions.md  (+1 more)
(+70 files in other folders)
