[metadata]
name = spa
author = Filip Mazurek
description = SMC for Processor Analysis
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    spa = spa.spa_frontend.spa:main

[options.packages.find]
include = spa*

[flake8]
ignore = F403, F405, F821
max_line_length = 120
exclude = .git,__pycache__
count = True

[mypy]
files = spa/
warn_unused_configs = True
warn_redundant_casts = True
show_error_context = True
show_error_codes = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_optional = True
